--- a/index.html
+++ b/index.html
@@ -23,23 +23,19 @@
                 <button id="twoHtml"></button>
                 <button id="threeHtml"></button>
                 <button id="fourHtml"></button>
-
             </div>
         </section>
         <button id="startButtonHtml">Start</button>
         <section>
             <div id="timerContainer">Timer
                 <div id="timerCount">60 div
-                    <div id="scoreContainer">0</div>
-                    <h2>Wins: <span class="">0 </span> </h2>
-                    <h2>Losses: <span class="">0</span></h2>
-
-
-
-
-
                 </div>
-            </div>
+                <div id="scoreContainer">
+                    <div id="scorebox">
+                        <div>Enter Intials</div>
+                        <input id="nameInput"></input>
+                        <button id="scoreButton">Finish</button>
+                    </div>
         </section>
     </main>
     <script src="script.js"></script>
