--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1 id="quiz">Quiz Master</h1>
-        <div id="large-font">Good Luck</div>
+        <h1 id="quiz">Quiz Master </h1>
+        <div id="larger-font">Good Luck &#9752;</div>
     </header>
 
     <main>
